# deas

./: %fromdos.sh  .gitignore  CMakeLists.txt  Makefile  Makefile-old  Makefile.dos  accounts.cc  andrew.txt  backup  backup.py  balance.py  chart  chkdeas  client.c  config  deas.bat  deas.h  deas.lnk  deas.pgp  deas.txt  deasctl.c  deasguid.txt  entries.cc  group1.txt  group2.txt  group3.txt  help.cc  journal.cc  lib.c  main.cc  restore.py  sak.txt  server.c  users.cc  util.c  vak.txt  vav.txt  vsk.txt  wattcp.cfg
pgplib/: CMakeLists.txt  Makefile  Makefile.dos  idea.c  idea.h  libnul.c  libpgp.c  md5.c  md5.h  mpiio.c  mpiio.h  mpilib.c  mpilib.h  pgplib.h  randpool.c  rsaglue1.c  usuals.h
python/: Makefile  deasmod.c  deaspyth.txt
python/python/: modsupport.h
scrlib/: Box.cc  CMakeLists.txt  Captab.h  Dialog.cc  Dialog.h  Key.cc  KeyPrivate.h  Makefile  Makefile.dos  Menu.cc  Menu.h  Popup.cc  Popup.h  Scrdos.cc  Screen.cc  Screen.h  Termcap.cc  Termcap.h  Termgoto.cc  Termlib.cc  Tty.cc  TtyPrivate.h  ctype.c  ctype.h  curses-r.txt  curses.cc  curses.h  extdos.h  extern.h  hellcurs.c  hello.cc  hv.cc  readme  readme-r
src/: CMakeLists.txt  accounts.cc  client.c  deas.h  deasctl.c  entries.cc  help.cc  journal.cc  lib.c  main.cc  server.c  users.cc  util.c
watlib/: elib.h  ethdev.h  icmp.h  readme  readme.2nd  tcp.h  wattcp.h  wattcplg.lib
